--- a/vue/前后端交互/fetch用法.html
+++ b/vue/前后端交互/fetch用法.html
@@ -92,7 +92,7 @@
         }).then(data => {
             return data.json();
         }).then(data => {
-            console.log(data);
+            console.log(data); // 
         });
     </script>
 </body>
