携程首页搜索框

--- a/html5+css3/flex布局/align-items设置侧轴子元素排列(单行).html
+++ b/html5+css3/flex布局/align-items设置侧轴子元素排列(单行).html
@@ -15,7 +15,7 @@
             /* 从下到上 */
             /* align-items: flex-end; */
             /* 居中 */
-            align-items: center;
+            /* align-items: center; */
             width: 500px;
             height: 500px;
             background-color: pink;
