测试git local user.mail

--- a/vue/组件化开发/父传子.html
+++ b/vue/组件化开发/父传子.html
@@ -58,7 +58,7 @@
                     num:12,
                     content: '大风起兮云飞扬，威加海内兮归故乡，安得猛士兮守四方。'
                 },
-                likePeople: ['韩信','赵云','关云长','刘伯温'],
+                likePeople: ['韩信','赵云','关云长','刘伯温','张居正'],
                 goodIdea: '不错，有气势！！！'
             },
             methods: {
