webpack 自动化构建。js预处理、css预处理、less预处理

--- a/module-demo/webpack/src/index.html
+++ b/module-demo/webpack/src/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../dist/main.js"></script>
+    <!-- <script src="../dist/main.js"></script> -->
+    <!-- 自动构建的js -->
+    <script src="/bundle.js"></script>
 </head>
 
 <body>
@@ -17,6 +19,7 @@
         <li>这是第5个li</li>
         <li>这是第6个li</li>
     </ul>
+    <input type="text" placeholder="测试浏览器前缀">
 </body>
 
 
