--- a/module-demo/webpack/src/index.html
+++ b/module-demo/webpack/src/index.html
@@ -19,7 +19,9 @@
         <li>这是第5个li</li>
         <li>这是第6个li</li>
     </ul>
+    <p>vue component</p>
     <input type="text" placeholder="测试浏览器前缀">
+    <div id="box"></div>
 </body>
 
 
