var,let,const声明变量的区别和用法

--- a/javascript高级程序设计4/2.语言基础/demo.html
+++ b/javascript高级程序设计4/2.语言基础/demo.html
@@ -9,14 +9,8 @@
 </head>
 
 <body>
-    <noscript>
-        脚本不可用时显示
-    </noscript>
-    <script>
-        const script = document.createElement('script');
-        script.src = './demo.js';
-        document.head.appendChild(script);
-    </script>
+    <script src="./variable.js"></script>
+    <script src="./var2.js"></script>
 </body>
 
 </html>
