正则表达式练习

--- a/javascript/RegExp/reg.html
+++ b/javascript/RegExp/reg.html
@@ -43,7 +43,7 @@
     const div = document.querySelector('.msg');
     btn.addEventListener('click', () => {
         console.log(txt);
-        const res = txt.value.replace(/五毛/g, '**');
+        const res = txt.value.replace(/五毛/g, '***');
         div.innerHTML = res;
     })
 </script>
