--- a/javascript高级程序设计4/7.迭代器与生成器/1.迭代器模式.html
+++ b/javascript高级程序设计4/7.迭代器与生成器/1.迭代器模式.html
@@ -32,7 +32,7 @@
     console.log(arr2FromMap); // [["a",1],["b",2]]
     const arrFromSet = Array.from(set);
     console.log(arrFromSet); // ["a","b","c"]
-    console.log([...set]);
+    console.log([...set]); // ["a","b","c"]
   </script>
 </body>
 </html>
