learn:定义捕获器

--- a/javascript高级程序设计4/8.对象、类、面向对象编程/4.类.html
+++ b/javascript高级程序设计4/8.对象、类、面向对象编程/4.类.html
@@ -11,7 +11,7 @@
     class Animal {}
     class Person {
       constructor() {
-        this.name = 'link';
+        // this.name = 'link';
       }
     }
     const p1 = new Person();
