组件基础，动态组件，异步组件，跨组件通信...

--- a/javascript高级程序设计4/11.期约与异步函数/5.异步函数.html
+++ b/javascript高级程序设计4/11.期约与异步函数/5.异步函数.html
@@ -29,7 +29,7 @@
       await new Promise((resolve, reject) => setTimeout(resolve, 1000));
       console.log('baz');
     }
-    baz();
+    baz(); // baz
   </script>
 </body>
 </html>
