--- a/vue3/mooc/diractive/index.html
+++ b/vue3/mooc/diractive/index.html
@@ -5,19 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>自定义指令</title>
+  <link rel="stylesheet" href="./style/style.css">
   <script src="../../lib/vue.js"></script>
 </head>
 <body>
   <div id="app">
     {{ msg }}
-    <diractive-demo></diractive-demo>
+    <diractive-demo :top="top" :distance="distance"></diractive-demo>
   </div>
   <script src="./main.js"></script>
   <script src="./component/DiractiveDemo.js"></script>
   <!-- 加载指令 -->
   <script src="./diractive.js"></script>
   <script>
-    app.mount('#app')
+    const vm = app.mount('#app')
   </script>
 </body>
 </html>
