--- a/javascript高级程序设计4/11.期约与异步函数/1.异步编程.html
+++ b/javascript高级程序设计4/11.期约与异步函数/1.异步编程.html
@@ -67,6 +67,7 @@
     }
     mutiple(2, successCallback, errorCallback); // 50 
     mutiple('2', successCallback, errorCallback); // argument error
+// 远程更改了代码
   </script>
 </body>
 </html>
