--- a/javascript高级程序设计4/24. 网络请求与远程资源/4.POST请求.html
+++ b/javascript高级程序设计4/24. 网络请求与远程资源/4.POST请求.html
@@ -16,7 +16,7 @@
         const xhr = new XMLHttpRequest()
         xhr.open('post', 'index.php', true)
         const form = document.getElementById('form')
-        xhr.send(null)
+        xhr.send('form data')
     </script>
 </body>
 
