--- a/React/heima/basic/jsx基本使用.html
+++ b/React/heima/basic/jsx基本使用.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>start</title>
+  <title>jsx</title>
   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <!-- babel -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
-  <script>
-    const title = React.createElement('h1', null, 'Hello React')
-    ReactDOM.render(title, document.getElementById('root'))
+  <script type="text/babel">
+    ReactDOM.render(
+      <h1> hello world </h1>,
+      document.getElementById('root')
+    )
   </script>
 </body>
 </html>
