--- a/html5+css3+h5/ECharts/index.html
+++ b/html5+css3+h5/ECharts/index.html
@@ -41,14 +41,25 @@
 
       <!-- 中间图标 start -->
       <div class="column">
+        <!-- 数字模块 -->
         <div class="no">
           <div class="no-hd">
             <ul>
-              <li>123456</li>
+              <li>263456</li>
               <li>189302</li>
             </ul>
           </div>
-          <div class="no-bd"></div>
+          <div class="no-bd">
+            <ul>
+              <li>前端需求人数</li>
+              <li>前端供应人数</li>
+            </ul>
+          </div>
+        </div>
+        <!-- 地图模块 -->
+        <div class="map">
+          <div class="map-bg"></div>
+          <div class="map-animation"></div>
         </div>
       </div>
       <!-- 中间图标 end -->
