feat: 逆时针动画

--- a/html5+css3+h5/ECharts/index.html
+++ b/html5+css3+h5/ECharts/index.html
@@ -59,7 +59,8 @@
         <!-- 地图模块 -->
         <div class="map">
           <div class="map-bg"></div>
-          <div class="map-animation"></div>
+          <div class="map-rotate1"></div>
+          <div class="map-rotate2"></div>
         </div>
       </div>
       <!-- 中间图标 end -->
