feat: 准备地图容器

--- a/html5+css3+h5/ECharts/index.html
+++ b/html5+css3+h5/ECharts/index.html
@@ -61,6 +61,8 @@
           <div class="map-bg"></div>
           <div class="map-rotate1"></div>
           <div class="map-rotate2"></div>
+          <div class="chart">
+          </div>
         </div>
       </div>
       <!-- 中间图标 end -->
