feat: 基础柱状图

--- a/html5+css3+h5/ECharts/index.html
+++ b/html5+css3+h5/ECharts/index.html
@@ -7,6 +7,7 @@
   <title>ECharts</title>
   <link rel="stylesheet" href="./css/index.css">
   <script src="./javascript/flexible.js"></script>
+  <script src="./javascript/echarts.js"></script>
   <script src="./javascript/index.js" type="module"></script>
 </head>
 <body>
@@ -18,14 +19,14 @@
     <section class="main-box">
       <!-- 右侧图表 start -->
       <div class="column">
-        <div class="panel bar">
-          <h2>柱形图-就业行业</h2>
+        <div class="panel bar" id="bar1">
+          <h2>柱形图-就业行业12</h2>
           <div class="chart">
           </div>
           <div class="footer"></div>
         </div>
         <div class="panel line">
-          <h2>柱形图-就业行业</h2>
+          <h2>柱形图-就业行业1</h2>
           <div class="chart">
           </div>
           <div class="footer"></div>
