--- a/html5+css3+h5/ECharts/index.html
+++ b/html5+css3+h5/ECharts/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="footer"></div>
         </div>
-        <div class="panel line">
+        <div class="panel line" id="line1">
           <h2>柱形图-就业行业1</h2>
           <div class="chart">
           </div>
@@ -69,7 +69,7 @@
       <!-- 中间图标 end -->
       <!-- 左侧图表 start -->
       <div class="column">
-        <div class="panel bar">
+        <div class="panel bar2" id="bar2">
           <h2>柱形图-就业行业</h2>
           <div class="chart">
           </div>
