--- a/vue3/Deep-Dive-with-Evan/vdom.html
+++ b/vue3/Deep-Dive-with-Evan/vdom.html
@@ -9,6 +9,9 @@
     .red {
       color: red;
     }
+    .green {
+      color: green;
+    }
   </style>
 </head>
 <body>
@@ -22,7 +25,7 @@
       }
     }
     function mount(vnode, container) {
-      const el = document.createElement(vnode.tag);
+      const el = vnode.el = document.createElement(vnode.tag);
       if(vnode.props) {
         for (const key in vnode.props) {
           const val = vnode.props[key];
@@ -43,6 +46,67 @@
     ]);
     // const vdom = h('div', {class: 'red'}, 'hello');
     mount(vdom, document.getElementById('app'));
+
+    function patch(n1, n2) {
+      if(n1.tag === n2.tag) {
+        const el = n2.el = n1.el;
+        const oldProps = n1.props || {};
+        const newProps = n2.props || {};
+        for (const key in newProps) {
+          const oldValue = oldProps[key];
+          const newValue = newProps[key];
+          if(newValue !== oldValue) {
+            el.setAttribute(key, newValue);
+          }
+        }
+        for(const key in oldProps) {
+          if(!(key in newProps)) {
+            el.removeAttribute(key)
+          }
+        }
+        // children
+        const oldChildren = n1.children;
+        const newChildren = n2.children;
+        if(typeof newChildren === 'string') {
+          if(typeof oldChildren === 'string') {
+            if(oldChildren !== newChildren) {
+              el.textContent = newChildren;
+            }
+          } else {
+            el.textContent = newChildren;
+          }
+        } else {
+          if(typeof oldChildren === 'string') {
+            el.innerHTML = '';
+            newChildren.forEach(child => {
+              mount(child, el);
+            })
+          } else { // both Children is array
+            const commonLength = Math.min(oldChildren.length, newChildren.length);
+            for(let i = 0; i < commonLength; i++) {
+              patch(oldChildren[i], newChildren[i]);
+            }
+
+            if(newChildren.length > oldChildren.length) {
+              newChildren.slice(oldChildren.length).forEach(child => {
+                mount(child, el);
+              })
+            } else if(newChildren.length < oldChildren.length) {
+              oldChildren.slice(newChildren.length).forEach(child => {
+                el.removeChild(child.el);
+              })
+            }
+          }
+        }
+      } else {
+        // replace
+      }
+    }
+
+    const vdom2 = h('div', {class: 'green'}, [
+      h('span', null, 'text changed')
+    ]);
+    patch(vdom, vdom2);
   </script>
 </body>
 </html>
