--- a/html5+css3+h5/50-projects/2. progress-steps/index.html
+++ b/html5+css3+h5/50-projects/2. progress-steps/index.html
@@ -20,6 +20,6 @@
     <button class="btn" id="prev" disabled>Prev</button>
     <button class="btn" id="next">Next</button>
   </div>
-  <script src=""></script>
+  <script src="./main.js"></script>
 </body>
 </html>
