feat:  linkedList node

--- a/javascript/DataStruct and Algorithms/data-structures/linked-list/index.html
+++ b/javascript/DataStruct and Algorithms/data-structures/linked-list/index.html
@@ -10,10 +10,11 @@
 
 <body>
     <script type="module">
-        import LinkedList from './LinkedList.js';
-        const list = new LinkedList();
-        list.say();
+        // import LinkedList from './LinkedList.js';
+        // const list = new LinkedList();
+        // list.say();
     </script>
+    <script src="./LinkedList1.js"></script>
 </body>
 
 </html>
