--- a/LeetCode/1.1-10/2.add_two_number/index.html
+++ b/LeetCode/1.1-10/2.add_two_number/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>add two numbers</title>
 </head>
 <body>
   <script src="./2.add_two_number.js"></script>
