--- a/webGL/get-start/1. 快速入门/1. draw_point.html
+++ b/webGL/get-start/1. 快速入门/1. draw_point.html
@@ -12,7 +12,7 @@
        var canvas=document.getElementById('webgl');
        //通过方法getContext()获取WebGL上下文
        var gl=canvas.getContext('webgl');
-   
+       console.log(gl);
        //顶点着色器源码
        var vertexShaderSource = '' +
            'void main(){' +
