style: 搭建组件色板

--- a/React/meta-ui/src/test/color.html
+++ b/React/meta-ui/src/test/color.html
@@ -32,6 +32,9 @@
     .color .danger {
       background-color: #e46966;
     }
+    .color .info {
+      background-color: #fcf8f4;
+    }
   </style>
 </head>
 <body>
@@ -39,6 +42,7 @@
     <div class="primary"></div>
     <div class="success"></div>
     <div class="default"></div>
+    <div class="info"></div>
     <div class="waring"></div>
     <div class="danger"></div>
   </div>
