--- a/threejs/fireship/vite-project/index.html
+++ b/threejs/fireship/vite-project/index.html
@@ -8,6 +8,36 @@
   </head>
   <body>
     <canvas id="bg"></canvas>
+    <main>
+      <header>
+        <h1>违章动物</h1>
+        <p>🚀 welcome</p>
+      </header>
+      <blockquote>
+        <p>让我们泰然若素， 与自己的时代狭路相逢</p>
+      </blockquote>
+
+      <section>
+        <h2>前端打工人</h2>
+        <p>
+          前端大前端
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis suscipit, asperiores aliquam veniam sed commodi autem quasi harum ad consequuntur molestiae dolorum maxime explicabo odio! Recusandae possimus quia iure vel!</p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere quidem vel natus consequatur fuga soluta? Nesciunt placeat molestiae saepe nostrum quos, sapiente illo repellat numquam totam dolorem, corporis deleniti?
+        </p>
+      </section>
+      <section class="light">
+        <h2>Project</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius atque placeat, cumque nostrum consequuntur dolor ipsum, ducimus est accusantium, error fuga. Facere, dignissimos obcaecati. Ratione distinctio fugiat modi reprehenderit fugit?
+        </p>
+        <h2>Love</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore dignissimos fugit, vitae dolorum aliquid earum minima corrupti sequi amet fugiat ex, ducimus officia vero illo at, assumenda cumque quod quasi?
+        </p>
+      </section>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
