--- a/vue3/reactivity/easy-demo.html
+++ b/vue3/reactivity/easy-demo.html
@@ -8,32 +8,6 @@
 </head>
 <body>
   <div class="demo" id="root"></div>
-  <script>
-    let data = {
-      value: 'hello'
-    }
-    const effect = () => {
-      document.getElementById('root').innerHTML = obj.value
-    }
-    const dep = new Set()
-    const obj = new Proxy(data, {
-      get(target, key) {
-        console.log('call getter')
-        dep.add(effect)
-        return target[key]
-      },
-      set(target, key, value) {
-        console.log('call setter')
-          target[key] = value
-          dep.forEach((fn) => fn())
-          return true
-      }
-    })
-    console.log(obj.value, obj)
-    effect()
-    setTimeout(() => {
-      obj.value = 'world'
-    }, 1500);
-  </script>
+  <script src="./src/easy-3.js"></script>
 </body>
 </html>
