feat coplilot 写方法

--- a/Typescript/udemy-ts/index.html
+++ b/Typescript/udemy-ts/index.html
@@ -13,5 +13,6 @@
     <button id="add">add</button>
   </div>
   <script src="./src/add.js"></script>
+  <script src="./src/copilot.js"></script>
 </body>
 </html>
